--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
 
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
 
@@ -24,16 +24,16 @@
   <body>
     <nav>
       <div class="snap-nav">
-        <img class="logo" src="/images/logo.svg" />
+        <img class="logo" src="./images/logo.svg" />
         <div class="shadow">
           <div class="wrapper">
             <div class="right-nav">
               <ul>
                 <li class="dropdown-list feature">
-                  Features <img src="/images/icon-arrow-down.svg" />
+                  Features <img src="./images/icon-arrow-down.svg" />
                 </li>
                 <li class="dropdown-list company">
-                  Company <img src="/images/icon-arrow-down.svg" />
+                  Company <img src="./images/icon-arrow-down.svg" />
                 </li>
                 <li>Careers</li>
                 <li>About</li>
@@ -48,15 +48,15 @@
           </div>
         </div>
         <div class="burger">
-          <img class="menu" src="/images/icon-menu.svg" />
+          <img class="menu" src="./images/icon-menu.svg" />
         </div>
       </div>
       <div class="drop-menu feature-list">
         <ul>
-          <li><img src="/images/icon-todo.svg" /> Todo List</li>
-          <li><img src="/images/icon-calendar.svg" />Calender</li>
-          <li><img src="/images/icon-reminders.svg" />Reminders</li>
-          <li><img src="/images/icon-planning.svg" />Planning</li>
+          <li><img src="./images/icon-todo.svg" /> Todo List</li>
+          <li><img src="./images/icon-calendar.svg" />Calender</li>
+          <li><img src="./images/icon-reminders.svg" />Reminders</li>
+          <li><img src="./images/icon-planning.svg" />Planning</li>
         </ul>
       </div>
 
@@ -87,15 +87,15 @@
 
         <div class="clients">
           <ul>
-            <li><img src="/images/client-databiz.svg" /></li>
-            <li><img src="/images/client-audiophile.svg" /></li>
-            <li><img src="/images/client-meet.svg" /></li>
-            <li><img src="/images/client-maker.svg" /></li>
+            <li><img src="./images/client-databiz.svg" /></li>
+            <li><img src="./images/client-audiophile.svg" /></li>
+            <li><img src="./images/client-meet.svg" /></li>
+            <li><img src="./images/client-maker.svg" /></li>
           </ul>
         </div>
       </div>
       <div class="hero-image">
-        <img src="/images/image-hero-mobile.png" alt="" />
+        <img src="./images/image-hero-mobile.png" alt="" />
       </div>
     </div>
 
